title part with gif added

--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
 
     <body>
         <!-- YOUR CONTENT GOES HERE -->
+
+        <div id="title">
+            <!-- <iframe src="//giphy.com/embed/ADgfsbHcS62Jy" width="480" height="295" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+                <p><a href="https://giphy.com/gifs/money-atm-ADgfsbHcS62Jy">via GIPHY</a></p> -->
+            <h1 class="big-text">Cut the Budget</h1>
+            <p class="byline">by Brett Dahlberg and William Mathis</p>
+        </div>
+        <!--closes title-->
         <div class="hold-text">
             <div id="big-number">
 
