--- a/index.html
+++ b/index.html
@@ -71,6 +71,18 @@
                         </ul>
                     </div>
                     <!--closes commerce-->
+                    <ul class="department">Department of Eduction</ul>
+                    <div class="education">
+                        <ul class="list"><input type="checkbox" name="education" class="subset" id="impact-aid-support" data-cut="66813">Impact Aid Support Payments for Federal Property, which help schools that have lost a portion of their tax base because the federal
+                            government bought at least 10 percent of land in their district.</input>
+                        </ul>
+                        <ul class="list"><input type="checkbox" name="education" class="subset" id="teacher-quality-partnership" data-cut="42500000">Teacher Quality Partnership, which provides training for new teachers.</input>
+                        </ul>
+                        <ul class="list"><input type="checkbox" name="education" class="subset" id="striving-readers">Striving Readers grants, which promote literacy skills for kids until 12th grade.</input>
+                        </ul>
+
+                    </div>
+                    <!--closes education-->
                 </div>
                 <!--closes div department lists-->
             </div>
