--- a/index.html
+++ b/index.html
@@ -32,16 +32,18 @@
         </div>
         <!--closes title-->
         <div class="hold-text">
-            <div id="big-number">
 
-                <p>$<span class="defense"></span></p>
-            </div>
             <div id="top-text">
                 <p>President Trump wants to increase the budget for the Department of Defense by $54 billion. But to do that without raising the deficit or cutting entitlements, he needs to cut a lot of other programs. Help Trump make the necessary cuts
                     by clicking the boxes next to programs below. Once you choose all the programs you want to cut, press the calculate button.
                 </p>
             </div>
-            <input type="button" value="Calculate" id="calculate-button" />
+            <div id="big-number">
+
+                <p>$<span class="defense"></span></p>
+                <input type="button" value="Calculate" id="calculate-button" />
+            </div>
+
 
             <div class="heading" id="departments">
                 <div id="departments-list">
@@ -80,7 +82,21 @@
                         </ul>
                         <ul class="list"><input type="checkbox" name="education" class="subset" id="striving-readers">Striving Readers grants, which promote literacy skills for kids until 12th grade.</input>
                         </ul>
-
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ac facilisis justo. Quisque eget dolor venenatis, cursus nunc at, varius massa. Fusce congue nibh vel enim ornare condimentum. Vestibulum massa odio, pellentesque
+                            at neque eu, maximus interdum mauris. Curabitur quis orci interdum, imperdiet magna nec, consequat ex. Fusce at vestibulum nisi, a posuere dui. Curabitur vitae felis eu dui feugiat lobortis non et tellus. Praesent erat neque,
+                            euismod ut risus vitae, lacinia facilisis mauris. Sed ut lectus mi. Fusce blandit pharetra efficitur. Donec diam nulla, iaculis quis eros sit amet, commodo commodo nisl. Sed eget posuere purus. Maecenas lacinia nibh vitae fermentum
+                            semper. Nunc cursus sem ac tellus ullamcorper, sed semper orci tempor. Quisque fringilla consectetur congue. Donec a iaculis tortor. Vivamus efficitur accumsan euismod. Etiam diam sapien, vehicula dapibus aliquam quis, placerat
+                            vitae ex. In iaculis dolor velit. Nullam egestas fringilla enim. Etiam at neque vehicula, porttitor metus nec, ornare lectus. Curabitur maximus mattis leo id dictum. Cras et metus sit amet felis rhoncus ornare quis luctus elit.
+                            Pellentesque maximus nisl et metus blandit tempus. Proin sed metus mi. Fusce mollis nec mauris sed imperdiet. Maecenas at mauris sit amet ante dapibus aliquam in luctus ex. Maecenas iaculis ut turpis sit amet blandit. Maecenas
+                            auctor imperdiet velit, a venenatis massa eleifend nec. Phasellus eu ornare lorem, faucibus dignissim sem. Vestibulum quis dui odio. Donec lectus erat, imperdiet at dui quis, malesuada scelerisque turpis. Donec non quam mauris.
+                            Morbi et est euismod nunc congue finibus. Donec et elit nec urna convallis interdum ac et nisl. Duis ante ex, tempus non mi id, porta condimentum arcu. Integer ac neque tempor, pharetra nisi vitae, cursus felis. Cras ut ligula
+                            tellus. Duis eu fermentum purus, at pretium lacus. Nunc a gravida purus. Donec dictum hendrerit massa, et pretium massa porttitor nec. Vestibulum iaculis lacus nec felis dapibus, nec pellentesque libero egestas. Nulla scelerisque
+                            sapien at tellus tempus, vitae pulvinar est consectetur. Suspendisse vel libero eget sem aliquet tincidunt at mattis sapien. In orci arcu, tempor ut enim a, rutrum pharetra orci. Sed ac faucibus urna. Vivamus quis dolor ultricies,
+                            convallis orci vel, vehicula sem. Nunc eu velit eget dolor tincidunt ultrices. Sed ultricies dapibus mauris. Vestibulum non tortor at sem ornare posuere ac a sapien. Vestibulum hendrerit interdum metus, vel vestibulum risus
+                            lobortis id. Mauris at libero quis ante tempor fermentum ut sit amet elit. Suspendisse mauris ligula, mollis non ante pretium, faucibus suscipit odio. Sed est elit, hendrerit in ex et, vulputate porttitor felis. Donec non finibus
+                            turpis, tincidunt facilisis enim. Nam malesuada et risus a ullamcorper. Nulla et est a quam feugiat viverra. Quisque semper aliquam mollis. Praesent posuere convallis tristique. In egestas venenatis congue. Sed quis augue vestibulum
+                            felis volutpat elementum. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aliquam eu dictum quam. Proin ornare posuere magna sit amet pellentesque. Donec laoreet lorem ac sodales tempus.
+                            Nulla porttitor nisi non rhoncus pulvinar.</p>
                     </div>
                     <!--closes education-->
                 </div>
