full screen money

--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
         <div class="hold-text">
 
             <div id="top-text">
-                <p>President Trump wants to increase the budget for the Department of Defense by $54 billion. But to do that without raising the deficit or cutting entitlements, he needs to cut a lot of other programs. Help Trump make the necessary cuts
-                    by clicking the boxes next to programs below. Once you choose all the programs you want to cut, press the calculate button.
+                <p>President Trump wants to increase the budget for the Department of Defense by:</p>
+                <span class="billion">$54 billion</span>
+                <p>But to do that without raising the deficit or cutting entitlements, he needs to cut a lot of other programs.</p>
+                <p>Help Trump make the necessary cuts, by clicking the boxes next to programs below. Once you choose all the programs you want to cut, press the calculate button.
                 </p>
             </div>
             <div id="big-number">
@@ -46,59 +48,125 @@
 
 
             <div class="heading" id="departments">
+
                 <div id="departments-list">
-                    <ul class="department">Department of Agriculture</ul>
-                    <div class="agriculture">
-                        <ul class="list"><input type="checkbox" name="agriculture" class="subset" id="waste-water-loan" data-cut="498000000"> Water and Wastewater loan and grant program</input>
-                        </ul>
-                        <ul class="list"><input type="checkbox" name="agriculture" class="subset" id="rural-business-cooperative" data-cut="95000000">Rural Business and Cooperative Service discretionary activities</input>
-                        </ul>
-                        <ul class="list"><input type="checkbox" name="agriculture" class="subset" id="mcgovern-dole" data-cut="195000000">McGovern-Dole International Food for Education program</input>
-                        </ul>
-                        <ul class="list"><input type="checkbox" name="agriculture" class="subset" data-cut="3912000000">Other</input>
-                        </ul>
-                    </div>
+                    <details>
+                        <summary>
+                            <!-- <ul class="department"> -->
+
+                            Department of Agriculture
+                        </summary>
+                        <div class="agriculture">
+                            <ul class="list"><input type="checkbox" name="agriculture" class="subset" id="waste-water-loan" data-cut="498000000"> Water and Wastewater loan and grant program</input>
+                            </ul>
+                            <ul class="list"><input type="checkbox" name="agriculture" class="subset" id="rural-business-cooperative" data-cut="95000000">Rural Business and Cooperative Service discretionary activities</input>
+                            </ul>
+                            <ul class="list"><input type="checkbox" name="agriculture" class="subset" id="mcgovern-dole" data-cut="195000000">McGovern-Dole International Food for Education program</input>
+                            </ul>
+                            <ul class="list"><input type="checkbox" name="agriculture" class="subset" data-cut="3912000000">Other</input>
+                            </ul>
+                        </div>
+                    </details>
+
                     <!-- close agriculture -->
-                    <ul class="department">Department of Commerce</ul>
-                    <div class="commerce">
-                        <ul class="list"><input type="checkbox" name="commerce" class="subset" id="economic-development-administration" data-cut="221000000"> Economic Development Administration</input>
-                        </ul>
-                        <ul class="list"><input type="checkbox" name="commerce" class="subset" id="minority-business" data-cut="35600000">Minority Business Development Agency</input>
-                        </ul>
-                        <ul class="list"><input type="checkbox" name="commerce" class="subset" id="manufacturing-extension" data-cut="124000000">Manufacturing Extension Partnership Program</input>
-                        </ul>
-                        <ul class="list"><input type="checkbox" name="commerce" class="subset" id="noaa" data-cut="250000000">National Oceanic and Atmospheric Administration programs and grants that support coastal and marine management, research and education</input>
-                        </ul>
-                        <ul class="list"><input type="checkbox" name="commerce" class="subset" data-cut="869400000">Other</input>
-                        </ul>
-                    </div>
+                    <!-- <ul class="department"> -->
+                    <details>
+                        <summary>Department of Commerce</summary>
+                        <!-- </ul> -->
+                        <div class="commerce">
+                            <ul class="list"><input type="checkbox" name="commerce" class="subset" id="economic-development-administration" data-cut="221000000"> Economic Development Administration</input>
+                            </ul>
+                            <ul class="list"><input type="checkbox" name="commerce" class="subset" id="minority-business" data-cut="35600000">Minority Business Development Agency</input>
+                            </ul>
+                            <ul class="list"><input type="checkbox" name="commerce" class="subset" id="manufacturing-extension" data-cut="124000000">Manufacturing Extension Partnership Program</input>
+                            </ul>
+                            <ul class="list"><input type="checkbox" name="commerce" class="subset" id="noaa" data-cut="250000000">National Oceanic and Atmospheric Administration programs and grants that support coastal and marine management, research and education</input>
+                            </ul>
+                            <ul class="list"><input type="checkbox" name="commerce" class="subset" data-cut="869400000">Other</input>
+                            </ul>
+                        </div>
+                    </details>
+
                     <!--closes commerce-->
-                    <ul class="department">Department of Eduction</ul>
-                    <div class="education">
-                        <ul class="list"><input type="checkbox" name="education" class="subset" id="impact-aid-support" data-cut="66813">Impact Aid Support Payments for Federal Property, which help schools that have lost a portion of their tax base because the federal
-                            government bought at least 10 percent of land in their district.</input>
-                        </ul>
-                        <ul class="list"><input type="checkbox" name="education" class="subset" id="teacher-quality-partnership" data-cut="42500000">Teacher Quality Partnership, which provides training for new teachers.</input>
-                        </ul>
-                        <ul class="list"><input type="checkbox" name="education" class="subset" id="striving-readers">Striving Readers grants, which promote literacy skills for kids until 12th grade.</input>
-                        </ul>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ac facilisis justo. Quisque eget dolor venenatis, cursus nunc at, varius massa. Fusce congue nibh vel enim ornare condimentum. Vestibulum massa odio, pellentesque
-                            at neque eu, maximus interdum mauris. Curabitur quis orci interdum, imperdiet magna nec, consequat ex. Fusce at vestibulum nisi, a posuere dui. Curabitur vitae felis eu dui feugiat lobortis non et tellus. Praesent erat neque,
-                            euismod ut risus vitae, lacinia facilisis mauris. Sed ut lectus mi. Fusce blandit pharetra efficitur. Donec diam nulla, iaculis quis eros sit amet, commodo commodo nisl. Sed eget posuere purus. Maecenas lacinia nibh vitae fermentum
-                            semper. Nunc cursus sem ac tellus ullamcorper, sed semper orci tempor. Quisque fringilla consectetur congue. Donec a iaculis tortor. Vivamus efficitur accumsan euismod. Etiam diam sapien, vehicula dapibus aliquam quis, placerat
-                            vitae ex. In iaculis dolor velit. Nullam egestas fringilla enim. Etiam at neque vehicula, porttitor metus nec, ornare lectus. Curabitur maximus mattis leo id dictum. Cras et metus sit amet felis rhoncus ornare quis luctus elit.
-                            Pellentesque maximus nisl et metus blandit tempus. Proin sed metus mi. Fusce mollis nec mauris sed imperdiet. Maecenas at mauris sit amet ante dapibus aliquam in luctus ex. Maecenas iaculis ut turpis sit amet blandit. Maecenas
-                            auctor imperdiet velit, a venenatis massa eleifend nec. Phasellus eu ornare lorem, faucibus dignissim sem. Vestibulum quis dui odio. Donec lectus erat, imperdiet at dui quis, malesuada scelerisque turpis. Donec non quam mauris.
-                            Morbi et est euismod nunc congue finibus. Donec et elit nec urna convallis interdum ac et nisl. Duis ante ex, tempus non mi id, porta condimentum arcu. Integer ac neque tempor, pharetra nisi vitae, cursus felis. Cras ut ligula
-                            tellus. Duis eu fermentum purus, at pretium lacus. Nunc a gravida purus. Donec dictum hendrerit massa, et pretium massa porttitor nec. Vestibulum iaculis lacus nec felis dapibus, nec pellentesque libero egestas. Nulla scelerisque
-                            sapien at tellus tempus, vitae pulvinar est consectetur. Suspendisse vel libero eget sem aliquet tincidunt at mattis sapien. In orci arcu, tempor ut enim a, rutrum pharetra orci. Sed ac faucibus urna. Vivamus quis dolor ultricies,
-                            convallis orci vel, vehicula sem. Nunc eu velit eget dolor tincidunt ultrices. Sed ultricies dapibus mauris. Vestibulum non tortor at sem ornare posuere ac a sapien. Vestibulum hendrerit interdum metus, vel vestibulum risus
-                            lobortis id. Mauris at libero quis ante tempor fermentum ut sit amet elit. Suspendisse mauris ligula, mollis non ante pretium, faucibus suscipit odio. Sed est elit, hendrerit in ex et, vulputate porttitor felis. Donec non finibus
-                            turpis, tincidunt facilisis enim. Nam malesuada et risus a ullamcorper. Nulla et est a quam feugiat viverra. Quisque semper aliquam mollis. Praesent posuere convallis tristique. In egestas venenatis congue. Sed quis augue vestibulum
-                            felis volutpat elementum. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aliquam eu dictum quam. Proin ornare posuere magna sit amet pellentesque. Donec laoreet lorem ac sodales tempus.
-                            Nulla porttitor nisi non rhoncus pulvinar.</p>
-                    </div>
-                    <!--closes education-->
+                    <!-- <ul class="department"> -->
+                    <details>
+                        <summary>Department of Education</summary>
+                        <!-- </ul> -->
+                        <div class="education">
+                            <ul class="list"><input type="checkbox" name="education" class="subset" id="impact-aid-support" data-cut="66813">Impact Aid Support Payments for Federal Property, which help schools that have lost a portion of their tax base because the federal
+                                government bought at least 10 percent of land in their district.</input>
+                            </ul>
+                            <ul class="list"><input type="checkbox" name="education" class="subset" id="teacher-quality-partnership" data-cut="42500000">Teacher Quality Partnership, which provides training for new teachers.</input>
+                            </ul>
+                            <ul class="list"><input type="checkbox" name="education" class="subset" id="striving-readers">Striving Readers grants, which promote literacy skills for kids until 12th grade.</input>
+                            </ul>
+                            <ul class="list"><input type="checkbox" name="education" class="subset" id="supporting-effective-instruction" data-cut="2400000000">Supporting Effective Instruction state grants to support professional development for teachers and principals
+                                and to reduce class size.</input>
+                            </ul>
+                            <ul class="list"><input type="checkbox" name="education" class="subset" id="twenty-first-century">21st Century Learners Program, which funds a wide variety of before and after-school programs.</input>
+                            </ul>
+                            <ul class="list"><input type="checkbox" name="education" class="subset" id="supplemental-educational">Supplemental</input>
+                            </ul>
+                            <ul class="lists"><input type="checkbox" name="education" class="subset" id="supplemental-opportunity-grant">Supplemental Educational Opportunity Grant, a need-based grant of of $100 to $4,000 per student</input>
+                            </ul>
+                        </div>
+                        <!--closes education-->
+                    </details>
+                    <details>
+
+                        <summary>Department of Energy</summary>
+                        <div class="energy">
+                        </div>
+                    </details>
+                    <details>
+
+                        <summary>Department of Health and Human Services</summary>
+                        <div class="hhs">
+                        </div>
+                    </details>
+                    <details>
+
+                        <summary>FEMA</summary>
+                    </details>
+                    <details>
+                        <summary>Department of Housing and Urban Development</summary>
+                    </details>
+                    <details>
+                        <summary>Department of the Interior</summary>
+                    </details>
+                    <details>
+                        <summary>Department of Justice</summary>
+                    </details>
+                    <details>
+                        <summary>Department of Labor</summery>
+                    </details>
+                    <details>
+                        <summary>Department of State and USAID</summary>
+                    </details>
+                    <details>
+                        <summary>Treasury International Programs</summary>
+                    </details>
+                    <details>
+                        <summary>Department of Transportation</summary>
+                    </details>
+                    <details>
+
+                        <summary>Department of the Treasury</summary>
+                    </details>
+                    <details>
+                        <summary>Environmental Protection Agency</summary>
+                    </details>
+                    <details>
+                        <summary>NASA</summary>
+                    </details>
+                    <details>
+                        <summary>Small Business Administration</summary>
+                    </details>
+                    <details>
+                        <summary>Independent agencies</summary>
+                    </details>
+
+
                 </div>
                 <!--closes div department lists-->
             </div>
@@ -115,5 +183,11 @@
 
         <!-- Your javascript should be called here -->
     </body>
+
+</html>
+</script>
+
+<!-- Your javascript should be called here -->
+</body>
 
 </html>
