TC fixed everything

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             </div>
             <div id="big-number">
 
-                <p>$<span class="defense"></span></p>
-                <input type="button" value="Calculate" id="calculate-button" />
+                <p>$<span class="defense">54000000000</span></p>
+                <!-- <input type="button" value="Calculate" id="calculate-button" /> -->
             </div>
 
 
