--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <title>Budget Calculator</title>
         <link rel="stylesheet" type="text/css" href="main.css">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-
+        <link rel="icon" type="image/png" href="images/money.ico">
         <!-- Your styles should be called here -->
 
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
