re-added icon to index.html.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- first step to a responsive site -->
         <title>Budget Calculator</title>
+        <link rel=“icon” type=“image/png” href=“images/money.ico”>
         <link rel="stylesheet" type="text/css" href="main.css">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
