revised top paragraphs

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <!--closes title-->
         <div class="hold-text">
             <div class="top-text">
-                <p>President Trump wants to increase the Defense Department budget by</p>
+                <p>President Trump's "America First" <a href="https://www.whitehouse.gov/sites/whitehouse.gov/files/omb/budget/fy2018/2018_blueprint.pdf">budget blueprint</a> calls for increasing defense spending by</p>
             </div>
             <!-- <span class="billion">$54 billion</span> -->
             <div id="results">
@@ -47,9 +47,9 @@
                 </div>
             </div>
             <div class="top-text">
-                <p>But to do that without raising the deficit or cutting entitlements, he needs to cut a lot of other programs.</p>
-                <p>Help Trump make the necessary cuts, by clicking the boxes next to programs below.
-                </p>
+                <p>in 2018. But he and budget director Mick Mulvaney have also pledged to balance the budget without raising the deficit or cutting entitlements. That means balancing out the increase in defense spending with budget cuts across other programs
+                    and departments.</p>
+                <p>The administration's budget blueprint lays out the programs that are on the chopping block. Help president Trump choose which budgets to cut. Click the triangle next to a department to find out more about its proposed cuts.</p>
             </div>
 
 
