started details for the details. Will, fix NASA.

--- a/index.html
+++ b/index.html
@@ -57,16 +57,17 @@
                 <div id="departments-list">
                     <div class="independent-agency">
                         <details>
-                            <summary><input type="checkbox" class='select_all' name='independent-agency'>
-                                <label class "select_all">Independent Federal Agencies</label></input>
+                            <summary><input type="checkbox" class="select_all" name="independent-agency">
+                                <label class="select_all">Independent Federal Agencies</label></input>
                             </summary>
                             <p class="summary-detail">The Trump administration's budget blueprint calls for eliminating 19 independent federal agencies. Check the ones you'd like to terminate.</p>
                             <ul class='list'>
                                 <div class="list-items">
                                     <li><input type="checkbox" name="independent-agency" class="subset" id="appalachian-regional" data-cut="120000000">
-                                        <label class="list">The Appalachian Regional Commission invests in economic opportunities, infrastructure and education in communities with
+                                        <label class="list"><details><summary>Appalachian Regional Commission</summary> Invests in economic opportunities, infrastructure and education in communities with
                                   the greatest need in Alabama, Georgia, Kentucky, Maryland, Mississippi, New York, North Carolina, Ohio, Pennsylvania, South Carolina, Tennessee, West Virginia, and Virginia, with the aim of achieving parity with the rest of
-                                  the country.</label></li>
+                                  the country.</details></label>
+                                    </li>
                                     <li><input type="checkbox" name="independent-agency" class="subset" id="african-development" data-cut="28200000">
                                         <label class="list">The African Development Foundation works with people in Africa to secure economic development and growth in the continent's
                                 most vulnerable communities.</label></li>
@@ -361,7 +362,7 @@ publications and research grants.
                                     <div class="state">
                                         <details>
                                             <summary><input type="checkbox" name="state" class="subset" id="other_state" data-cut="10100000000">
-                                                <label class="list">Department of State and USAID
+                                                <label class="select_all">Department of State and USAID
                                             </label></summary>
 
                                             <ul class="summary-detail">
@@ -454,7 +455,7 @@ publications and research grants.
 
                                     </details>
                                     <details>
-                                        <summary><input type="checkbox" name="nasa" class="subset" id="other_nasa" data-cut="15402240">NASA
+                                        <summary><input type="checkbox" name="nasa" class="select_all" id="other_nasa" data-cut="15402240">NASA
                                         </summary>
 
                                         <ul class="summary-detail">Eliminate the Office of Education and restructure a satellite refueling mission.</ul>
