second page updates

--- a/second-page.html
+++ b/second-page.html
@@ -29,7 +29,7 @@
             <h1 class="big-text2">Let's break it down</h1>
             <a href="index.html" class="back">Back to the calculator.</a>
             <p class="top-text">The budget that President Trump proposed is a dramatic change from spending in previous years.</p>
-            <figure><img src="images/whiteHouse.jpg" />
+            <figure><img src="images/whiteHouse.jpg" class="icon" />
                 <figcaption>Created by Nikita Kozin from Noun Project</figcaption</figure>
                     <p class="top-text ">"I wouldn’t call it a little bit of money coming out of a lot of departments," said Lindsay Koshgarian, research diretor of the National Priorities Project, a non-profit research organization critical of defense spending. "It’s a lot
                         of money coming out of a lot of departments."</p>
